--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,6 +6,12 @@
       apt: pkg=nginx state=latest 
       notify:
       - restart nginx
+    - name: copy static files
+      copy: src=../www dest=/var owner=www-data group=www-data
+    - name: configure nginx
+      template: src=templates/nginx.conf.j2 dest=/etc/nginx/nginx.conf owner=root mode=0644
+      notify:
+      - restart nginx
     - name: ensure nginx is running
       service: name=nginx state=started
   handlers:
