--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,6 +2,10 @@
 - hosts: all
   remote_user: root
   tasks:
+    - name: configure iptables
+      template: src=templates/iptables.j2 dest=/etc/iptables.rules
+      notify:
+      - restore iptables
     - name: upgrade nginx
       apt: pkg=nginx state=latest 
       notify:
@@ -17,4 +21,6 @@
   handlers:
     - name: restart nginx
       service: name=nginx state=restarted
+    - name: restore iptables
+      shell: iptables-restore < /etc/iptables.rules
 
