remove scala stuff, add a ruby/sinatra api and initscript

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,15 +4,11 @@
   tasks:
     - name: update apt
       apt: update_cache=yes cache_valid_time=3600
-    - name: upgrade packages
-      apt: upgrade=yes
     - name: install dependencies
       apt: pkg={{item}} state=latest
       with_items:
       - zip
       - unzip
-      - openjdk-7-jdk
-      - libjansi-java
     - name: configure iptables
       template: src=templates/iptables.j2 dest=/etc/iptables.rules
       notify:
@@ -25,16 +21,8 @@
       apt: pkg=nginx state=latest
       notify:
       - restart nginx
-    - name: download scala
-      get_url: url=http://www.scala-lang.org/files/archive/scala-2.10.3.deb dest=~/scala-2.10.3.deb
-    - name: install scala
-      shell: dpkg -E -i ~/scala-2.10.3.deb
-    - name: download typesafe activator
-      get_url: url=http://downloads.typesafe.com/typesafe-activator/1.0.13/typesafe-activator-1.0.13.zip dest=~/typesafe-activator-1.0.13.zip
-    - name: unzip typesafe activator
-      shell: unzip -d /opt/ ~/typesafe-activator-1.0.13.zip
-    - name: symlink typesafe activator
-      file: src=/opt/activator-1.0.13/activator dest=/usr/local/bin/activator owner=root group=root state=link
+    - name: upgrade packages
+      apt: upgrade=yes
     - name: copy static files
       copy: src=../www dest=/var owner=www-data group=www-data
     - name: configure nginx
@@ -43,6 +31,10 @@
       - restart nginx
     - name: ensure nginx is running
       service: name=nginx state=started
+    - name: install gems
+      gem: name={{item}} state=latest user_install=no
+      with_items:
+      - sinatra
   handlers:
     - name: restart nginx
       service: name=nginx state=restarted
