fix hostname in ansible_hosts; fix nginx logrotate config

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -28,6 +28,8 @@
       group: name=www-data state=present
     - name: create www-data user
       user: name=www-data group=www-data createhome=no
+    - name: create nginx logrotate file
+      template: src=templates/etc.logrotate.d.nginx.j2 dest=/etc/logrotate.d/nginx owner=root mode=0644
     - name: copy static files
       copy: src=../www dest=/var owner=www-data group=www-data
     - name: configure nginx
